Created visually keyboard and styled buttons of confirm input

--- a/index.html
+++ b/index.html
@@ -51,11 +51,43 @@
                 <input type="text" maxlength="1" class="letter-box" disabled />
                 <input type="text" maxlength="1" class="letter-box" disabled />
             </div>
-            <input type="submit" id="submit-word" value="ENTER" style="text-align: center;"/>
+            <input class="enter-button" type="submit" id="submit-word" value="ENVIAR" style="text-align: center;"/>
             <br>
             <input class="new-word-submit" type="submit" id="new-word" value="Jogar novamente" style="text-align: center; " disabled/>          
         </div>  
     </form>
+    <div class="keyboard">
+        <div class="keyboard__row">
+            <kbd class="keyboard__key C5">Q</kbd>
+            <kbd class="keyboard__key D5">W</kbd>
+            <kbd class="keyboard__key E5">E</kbd>
+            <kbd class="keyboard__key F5">R</kbd>
+            <kbd class="keyboard__key G5">T</kbd>
+            <kbd class="keyboard__key A5">Y</kbd>
+            <kbd class="keyboard__key B5">U</kbd>
+            <kbd class="keyboard__key C6">I</kbd>
+        </div>
+        <div class="keyboard__row">
+            <kbd class="keyboard__key C4">A</kbd>
+            <kbd class="keyboard__key D4">S</kbd>
+            <kbd class="keyboard__key E4">D</kbd>
+            <kbd class="keyboard__key F4">F</kbd>
+            <kbd class="keyboard__key G4">G</kbd>
+            <kbd class="keyboard__key A4">H</kbd>
+            <kbd class="keyboard__key B4">J</kbd>
+            <kbd class="keyboard__key C5">K</kbd>
+        </div>
+        <div class="keyboard__row">
+            <kbd class="keyboard__key C3">Z</kbd>
+            <kbd class="keyboard__key D3">X</kbd>
+            <kbd class="keyboard__key E3">C</kbd>
+            <kbd class="keyboard__key F3">V</kbd>
+            <kbd class="keyboard__key G3">B</kbd>
+            <kbd class="keyboard__key A3">N</kbd>
+            <kbd class="keyboard__key B3">M</kbd>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
