fix: Inserting missing letters in keyboard.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Jogo de Palavras</title>
+    <title>Word Game</title>
     <link rel="stylesheet" href="styles.css">
-    <h3 class="title">MY TERMO</h3>
+    <h3 class="title">Word Game</h3>
 </head>
 <body>
     <form id="word-form" method="post">
@@ -66,6 +66,8 @@
             <kbd class="keyboard__key A5">Y</kbd>
             <kbd class="keyboard__key B5">U</kbd>
             <kbd class="keyboard__key C6">I</kbd>
+            <kbd class="keyboard__key C6">O</kbd>
+            <kbd class="keyboard__key C6">P</kbd>
         </div>
         <div class="keyboard__row">
             <kbd class="keyboard__key C4">A</kbd>
@@ -76,6 +78,8 @@
             <kbd class="keyboard__key A4">H</kbd>
             <kbd class="keyboard__key B4">J</kbd>
             <kbd class="keyboard__key C5">K</kbd>
+            <kbd class="keyboard__key C5">L</kbd>
+            <kbd class="keyboard__key C5">Ç</kbd>
         </div>
         <div class="keyboard__row">
             <kbd class="keyboard__key C3">Z</kbd>
